crates/djls-python/tests/snapshots/corpus__repos__netbox__netbox__extras__templatetags__log_levels.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "netbox.extras.templatetags.log_levels::tag::log_level":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: level
        required: true
        kind: Variable
        position: 0
    as_var: keep
filter_arities: {}
block_specs: {}
